@@ -56,6 +56,7 @@ ASM_START()
 	TEXT
 	ALIGN(64)
 PROLOGUE(mpn_lshift)
+	DOS64_ENTRY(4)
 	movd	R32(%rcx), %xmm4
 	mov	$64, R32(%rax)
 	sub	R32(%rcx), R32(%rax)
@@ -139,6 +140,7 @@ L(end):	bt	$0, R32(n)
 	psrlq	%xmm5, %xmm0
 	por	%xmm1, %xmm0
 	movdqa	%xmm0, (rp)
+	DOS64_EXIT()
 	ret
 
 C Basecase
@@ -164,5 +166,6 @@ L(bc):	dec	R32(n)
 L(end8):movq	(ap), %xmm0
 	psllq	%xmm4, %xmm0
 	movq	%xmm0, (rp)
+	DOS64_EXIT()
 	ret
 EPILOGUE()
